--- a/styles/main.css
+++ b/styles/main.css
@@ -30,63 +30,11 @@ main{
     border-radius: 10px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* these are my modal styles */
-.overlay{
-    background-color: rgba(0,0,0,0.75);
+.header{
+    background-color: #333;
+    width: 100%;
     display: flex;
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 9;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px;
 }
-
-.myModal{
-    position: relative;
-    margin: auto;
-    padding: 1rem;
-    background: whitesmoke;
-    border-radius: 16px;
-}
-
-.myModal-content{
-    min-height: 200px;
-    min-width: 400px;
-    align-content: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.hidden{
-    display: none;
-}
-
-.modalMessage{
-    text-align: center;
-    align-content: center;
-    margin: 10px;
-}
-
-.inputField{
-    width: 500px;
-}
-
-
-/* end modal styles :) */
