--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
     min-height: 100vh;
     margin: 0;
     position: relative;
@@ -11,6 +11,14 @@ main{
     z-index: 1;
     background: black;
     color: #fafafa;
+}
+
+.header{
+    width: 100%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    height: 30px;
 }
 
 .cardForm{
@@ -36,61 +44,3 @@ main{
     width: 95%;
     margin-top: 50px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* these are my modal styles */
-.overlay{
-    background-color: rgba(0,0,0,0.75);
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 9;
-}
-
-.myModal{
-    position: relative;
-    margin: auto;
-    padding: 1rem;
-    background: whitesmoke;
-    border-radius: 16px;
-}
-
-.myModal-content{
-    min-height: 200px;
-    min-width: 400px;
-    align-content: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.hidden{
-    display: none;
-}
-
-.modalMessage{
-    text-align: center;
-    align-content: center;
-    margin: 10px;
-}
-
-.inputField{
-    width: 500px;
-}
-
-/* end modal styles :) */
